--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -97,11 +97,13 @@ To narrow down artifacts, you can apply some filters:
 
 3. On the Select Your Filters dialog that opens, enter your filtering criteria.[^8]
 
+    [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
+
 4. Click **Apply Filters**.
 
 ### Filter all other artifacts
 
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view lists of other artifact types across all models.
+1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
 
 2. Select an artifact type[^9] to view from the tabs:
 
@@ -111,6 +113,12 @@ To narrow down artifacts, you can apply some filters:
 3. Click **{{< fa filter >}} Filter**.
 
 4. On the Select Your Filters dialog that opens, enter your filtering criteria.[^10]
+
+::: {.callout collapse="true" title="Select your filters"}
+
+{{< include /guide/model-inventory/select-your-filters.qmd >}}
+
+:::
 
 5. Click **Apply Filters**.
 
