Add more imbed examples for the review

--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -114,10 +114,12 @@ To narrow down artifacts, you can apply some filters:
 
 4. On the Select Your Filters dialog that opens, enter your filtering criteria.[^10]
 
-::: {.callout collapse="true" title="Select your filters"}
+::: {.pl4 .nt5}
+::: {.callout collapse="true" title="How do I create effective filters?"}
 
 {{< include /guide/model-inventory/select-your-filters.qmd >}}
 
+:::
 :::
 
 5. Click **Apply Filters**.
