docs: Edit field keys (#1073)
* Manage model inventory fields: Rename custom field keys

* Manage artifact fields: Rename artifact field keys

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -76,6 +76,12 @@ For example, if you first search by keyword for `date` under **Title** without c
 
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
+### Rename custom field keys
+
+To rename the field keys for custom inventory fields:
+
+{{< include /guide/model-inventory/_rename-field-keys.qmd >}}
+
 #### Inventory field types
 
 {{< include /guide/model-inventory/_field-types.qmd >}}
