Lots more edits

--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -95,9 +95,15 @@ To narrow down artifacts, you can apply some filters:
 
 2. Click **{{< fa filter >}} Filter**.
 
-3. On the Select Your Filters dialog that opens, enter your filtering criteria.[^8]
+3. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
-    [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
+::: {.pl4 .nt2 .pr4} 
+::: {.callout collapse="true" title="How do I create effective filters?"}
+
+{{< include /guide/model-inventory/_select-your-filters.qmd >}}
+
+:::
+:::
 
 4. Click **Apply Filters**.
 
@@ -105,19 +111,19 @@ To narrow down artifacts, you can apply some filters:
 
 1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
 
-2. Select an artifact type[^9] to view from the tabs:
+2. Select an artifact type[^8] to view from the tabs:
 
    - Policy Exception
    - Model Limitation
 
 3. Click **{{< fa filter >}} Filter**.
 
-4. On the Select Your Filters dialog that opens, enter your filtering criteria.[^10]
+4. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
-::: {.pl4 .nt5}
+::: {.pl4 .nt2 .pr4}
 ::: {.callout collapse="true" title="How do I create effective filters?"}
 
-{{< include /guide/model-inventory/select-your-filters.qmd >}}
+{{< include /guide/model-inventory/_select-your-filters.qmd >}}
 
 :::
 :::
@@ -142,8 +148,4 @@ To narrow down artifacts, you can apply some filters:
 
 [^7]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^8]: [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
-
-[^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
-
-[^10]: [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
+[^8]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
