--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -37,9 +37,20 @@ Changes are automatically saved and will affect only your account.
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Use the top buttons to narrow down models and organize the model inventory to your preference:
+
    - **{{< fa magnifying-glass >}} Search** — Search for models using keywords in the model name.
-   - **{{< fa filter >}} Filter** — Filter models using different criteria.[^2]
-   - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^3]
+   - **{{< fa filter >}} Filter** — Filter models using different criteria.
+<!-- NR Quarto does not indent the last list item correctly if the next callout is in the middle of the list  -->
+   - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^2]
+
+::: {.pl4 .nt4}
+::: {.callout collapse="true" title="How do I create effective filters?"}
+
+{{< include /guide/model-inventory/_select-your-filters.qmd >}}
+
+:::
+:::
+
 
 ::: {.callout title="Note that searching, filtering, and sorting of fields stack."}
 For example, if you first search by keyword for `ValidMind` without clearing that search, any additional filtering and sorting applied will only apply to the results returned by the previous criteria.
@@ -60,9 +71,7 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Select your filters](select-your-filters.qmd){.button}
-
-[^3]:
+[^2]:
 
 - **[name]{.smallcaps}**
 - [**[business unit]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
