--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -8,7 +8,9 @@ Filtering supports simple and complex conditions using AND or OR logic with nest
 
 ## Rules
 
-Rules define individual conditions to filter by. To add a rule:
+Rules define individual conditions to filter by, such as the business unit or owner. 
+
+To add a rule:
 
 1. Click **{{< fa plus >}} Rule** to add a filter condition. 
    
@@ -148,20 +150,22 @@ Entity fields
 Groups combine multiple rules that are evaluated together and can be nested one level deep. You use groups for more complex queries, such as: 
 
 ::: {.pl4 .pr4}
-_Use case is Attrition/Churn Management AND (Business Unit is Commerical Banking OR Business Unit is Retail Banking)_
+_Condition A AND (Condition B OR Condition C)_
 
-![](/guide/model-inventory/select-your-filters-group.png){fig-alt="A rule AND a group of OR rules" .screenshot}
+![<small>Use case is Attrition/Churn Management AND (Business Unit is Commerical Banking OR Business Unit is Retail Banking)</small>](/guide/model-inventory/select-your-filters-group.png){fig-alt="A rule AND a group of OR rules" .screenshot}
 :::
 
 To add a group:
 
 1. Click **Add group** to create a nested group of conditions.
 
-2. Follow the same steps as in [Rules](#rules) to add one or several conditions to the group.
+2. Follow the same steps as in [**Rules**](#rules) to add one or several conditions to the group.
 
 3. Click **Apply Filters**.
 
 ## Combinators
+
+Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
 
 Supported combinators:
 
@@ -169,10 +173,13 @@ Supported combinators:
 
 ::: {.column width="70%" .pr3}
 
-   - **AND**: All conditions must match
-   - **OR**: At least one condition must match
+::: {.pl4}
+AND
+: All conditions must match
 
-By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
+OR
+: At least one condition must match
+:::
 
 1. Click the **AND** or **OR** button between rules or groups to change how conditions are combined.
 
