--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -39,77 +39,23 @@ Value editor
 
 2. From the field selector dropdown, select one of:
 
-:::: {.columns}
-
-::: {.column width="30%" .pl4 .pr2}
-**Default fields**  
-One of the fields always created by {{< var vm.product >}}.
-:::
-
-::: {.column width="30%" .pl4 .pr3}
-**Stakeholders or assignees**  
-Owner, Developer, or Validator, if applicable.
-:::
-
-::: {.column width="30%" .pl3}
-**Custom fields**  
-One of the organization-specific fields you added for your own use.
-:::
-
-::::
+    - **Default fields**: One of the fields always created by {{< var vm.product >}}, such as the Business Unit.
+    - **Stakeholders or assignees**: Owner, Developer, or Validator, if applicable.
+    - **Custom fields**: One of the organization-specific fields you added for your own use.
 
 3. From the operator dropdown, select one of:<br><small>_Available operators update based on the field selector._</small>
 
-:::: {.columns}
-
-::: {.column width="30%" .pl4 .pr2}
-Text fields
-: - equals
-- not equals
-- contains
-- begins with
-- ends with
-- is empty
-- is not empty
-</small>
-
-Date fields
-: - equals
-- not equals
-- before
-- after
-- between
-- is empty
-- is not empty
+::: {.pl4 .pr4 .pt2 .pb2}
+| Text fields      | Date fields          | Number fields          | Boolean fields        | Multi-select fields   |
+|------------------|---------------------|------------------------|----------------------|----------------------|
+| equals           | equals              | equals                 | equals               | in                   |
+| not equals       | not equals          | not equals             | not equals           | not in               |
+| contains         | before              | greater than           | is empty             | contains             |
+| begins with      | after               | less than              | is not empty         | is empty             |
+| ends with        | between             | between                |                      | is not empty         |
+| is empty         | is empty            | is empty               |                      |                      |
+| is not empty     | is not empty        | is not empty           |                      |                      |
 :::
-
-::: {.column width="30%" .pl4 .pr3}
-Number fields
-: - equals
-- not equals
-- greater than
-- less than
-- between
-- is empty
-- is not empty
-
-Boolean fields
-: - equals
-- not equals
-- is empty
-- is not empty
-:::
-
-::: {.column width="30%" .pl3}
-Multi-select fields
-: - in
-- not in
-- contains
-- is empty
-- is not empty
-:::
-
-::::
 
 4. From the value editor, enter or select a value based on the field type:<br><small>_Value input changes based on field selector._</small>
 
@@ -119,21 +65,21 @@ Multi-select fields
 Text
 : Text input or text area for longer content
 
-Date
-: Date picker
-:::
-
-::: {.column width="30%" .pl4 .pr3}
-Number
-: Number input or range slider
-
 Boolean
 : Checkbox
 :::
 
-::: {.column width="30%" .pl3}
+::: {.column width="30%" .pl4 .pr3}
+Date
+: Date picker<br>&nbsp;
+
 Select/multi-select
 : Dropdown with search
+:::
+
+::: {.column width="30%" .pl3}
+Number
+: Number input or range slider
 
 Entity fields
 : Dropdown with search for users or models
@@ -165,11 +111,12 @@ To add a group:
 
 ## Combinators
 
+Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
+
 :::: {.columns}
 
 ::: {.column width="70%" .pr3}
 
-Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
 
 Supported combinators:
 
@@ -192,11 +139,9 @@ To change the combinator:
 
 
 ::: {.callout title="Why can't I AND and OR top-level combinators?"}
-Combinators must evaluate logically for the filter to be applied. You cannot apply conflicting logic at the top-level, such as: 
+Combinators must evaluate logically for the filter to be applied. You cannot apply conflicting logic at the top-level, such as _Show items matching condition A AND condition B OR condition C_. 
 
-_Show items matching condition A AND condition B OR condition C_. 
-
-{{< fa hand-point-right >}} **To achive more complex queries, use groups.**
+{{< fa lightbulb >}} **To achive more complex queries, use groups.**
 :::
 
 ## Examples
@@ -205,9 +150,9 @@ _Show items matching condition A AND condition B OR condition C_.
 
 ### Simple AND query
 
-Show models that are Active AND in the Credit Risk business unit:
+Show models that are _Active AND in the Credit Risk business unit_:
 
-1. Add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
 
 2. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
 
@@ -215,9 +160,9 @@ Show models that are Active AND in the Credit Risk business unit:
 
 ### OR query with groups
 
-Show models that are (Active AND in Credit Risk) OR (In Review AND in Market Risk):
+Show models that are _(Active AND in Credit Risk) OR (In Review AND in Market Risk)_:
 
-1. Add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
 
 2. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
 
@@ -231,17 +176,17 @@ Show models that are (Active AND in Credit Risk) OR (In Review AND in Market Ris
 
 ### Custom field filter
 
-Show models where Custom Field `Risk Level` is `High`:
+Show models where _Custom Field `Risk Level` is `High`_ (requires that you have a custom field called `Risk Level`):
 
-1. Add rule: Field = `Custom Fields > Risk Level`, Operator = `equals`, Value = `High`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Custom Fields > Risk Level`, Operator = `equals`, Value = `High`.
 
 2. Click **Apply Filters**.
 
 ### Complex nested query
 
-Show models where (Status is Active OR In Review) AND (Risk Level is High OR Medium) AND Owner is John Doe:
+Show models where _(Status is Active OR In Review) AND (Risk Level is High OR Medium) AND Owner is John Doe_:
 
-1. Create first group: Status = `Active` OR Status = `In Review`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**, and add group: Status = `Active` OR Status = `In Review`.
 
 2. Create second group: Risk Level = `High` OR Risk Level = `Medium`.
 
@@ -253,9 +198,9 @@ Show models where (Status is Active OR In Review) AND (Risk Level is High OR Med
 
 ### Date range filter
 
-Show findings created between January 1, 2025 and January 31, 2025:
+Show validation issues _created between January 1, 2025 and January 31, 2025_:
 
-1. Add rule: Field = `Created Date`, Operator = `between`.
+1. On the Validation Issues page, click **{{< fa filter >}} Filter**, and add rule: Field = `Created Date`, Operator = `between`.
 
 2. Enter start date: January 1, 2025.
 
@@ -265,9 +210,9 @@ Show findings created between January 1, 2025 and January 31, 2025:
 
 ### Filter by owner and PDF attachments
 
-Show models owned by a specific user that have attachments with `pdf` in the file name:
+Show _models owned by a specific user that have .pdf attachments_:
 
-1. Add rule: Field = `Owner`, Operator = `in`, Value = [Select user from dropdown].
+1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Owner`, Operator = `in`, Value = Select the user from dropdown.
 
 2. Add rule: Field = `Supporting Documents`, Operator = `file name contains`, Value = `pdf`.
 
@@ -277,19 +222,14 @@ Show models owned by a specific user that have attachments with `pdf` in the fil
 
 :::
 
-### View and manage active filters
+### View active filters
 
 After applying filters, active filter conditions appear as individual chips below the page header with the label "Filtered by:". Each chip displays:
 
-- Field name (human-readable)
-- Operator (if applicable)
-- Value(s) (formatted for display)
-- Remove button ({{< fa xmark >}} icon)
+- Field name
+- Operator
+- Values
 
-### Remove individual filters
+### Remove active filters
 
-1. Click the {{< fa xmark >}} button on any filter chip to remove that specific filter condition.
-
-2. 
-
-The remaining filters are automatically reapplied. If removing a filter leaves no filters, all filters are cleared.
+Click the {{< fa xmark >}} icon on any filter chip to remove that specific filter condition. The remaining filters are automatically reapplied.
