Minor text tweaks

--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -93,13 +93,7 @@ Entity fields
 
 ## Groups
 
-Groups combine multiple rules that are evaluated together and can be nested one level deep. You use groups for more complex queries, such as: 
-
-::: {.pl4 .pr4 .tc}
-_Condition A AND (Condition B OR Condition C)<br><small>Example: Use case is Attrition/Churn Management AND (Business Unit is Commerical Banking OR Business Unit is Retail Banking)</small>_
-
-![](/guide/model-inventory/select-your-filters-group.png){fig-alt="A rule AND a group of OR rules" .screenshot}
-:::
+Groups combine multiple rules that are evaluated together and can be nested one level deep. You use groups for more complex filters, such as _Condition A AND (Condition B OR Condition C)_.
 
 To add a group:
 
@@ -109,19 +103,22 @@ To add a group:
 
 3. Click **Apply Filters**.
 
+::: {.pl4 .pr4 .tc}
+![<small>Example: Use case is Attrition/Churn Management AND (Business Unit is Commerical Banking OR Business Unit is Retail Banking)</small>](/guide/model-inventory/select-your-filters-group.png){fig-alt="A rule AND a group of OR rules" .screenshot}
+:::
+
 ## Combinators
 
 Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
 
 :::: {.columns}
 
-::: {.column width="70%" .pr3}
+::: {.column width="80%" .pr3}
 
 
 Supported combinators:
 
 - **AND**: All conditions must match
-
 - **OR**: At least one condition must match
 
 To change the combinator:
@@ -131,7 +128,7 @@ To change the combinator:
 2. Click **Apply Filters**.
 :::
 
-::: {.column width="30%" .pl3}
+::: {.column width="20%" .pl3}
 ![](/guide/model-inventory/select-your-filters-combinators.png){fig-alt="The AND and OR combinators" .screenshot}
 :::
 
@@ -139,9 +136,12 @@ To change the combinator:
 
 
 ::: {.callout title="Why can't I AND and OR top-level combinators?"}
-Combinators must evaluate logically for the filter to be applied. You cannot apply conflicting logic at the top-level, such as _Show items matching condition A AND condition B OR condition C_. 
+Combinators must evaluate logically for the filter to be applied. 
 
-{{< fa lightbulb >}} **To achive more complex queries, use groups.**
+- {{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_
+- {{< fa checkmark >}} _Show items matching Condition A AND (Condition B OR Condition C)_
+
+{{< fa lightbulb >}} **To achive more complex filters, use groups.**
 :::
 
 ## Examples
@@ -224,7 +224,7 @@ Show _models owned by a specific user that have .pdf attachments_:
 
 ### View active filters
 
-After applying filters, active filter conditions appear as individual chips below the page header with the label "Filtered by:". Each chip displays:
+After applying filters, these active filter conditions appear as individual chips next to the label **{{< fa filter >}} Filtered by:**. 
 
 - Field name
 - Operator
