--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -64,23 +64,34 @@ Value editor
 ::: {.column width="30%" .pl4 .pr2}
 Text
 : Text input or text area for longer content
-
-Boolean
-: Checkbox
 :::
 
 ::: {.column width="30%" .pl4 .pr3}
 Date
-: Date picker<br>&nbsp;
-
-Select/multi-select
-: Dropdown with search
+: Date picker
 :::
 
 ::: {.column width="30%" .pl3}
 Number
 : Number input or range slider
+:::
 
+::::
+
+
+:::: {.columns}
+
+::: {.column width="30%" .pl4 .pr2}
+Boolean
+: Checkbox
+:::
+
+::: {.column width="30%" .pl4 .pr3}
+Select/multi-select
+: Dropdown with search
+:::
+
+::: {.column width="30%" .pl3}
 Entity fields
 : Dropdown with search for users or models
 :::
@@ -111,13 +122,11 @@ To add a group:
 
 Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
 
-:::: {.columns}
-
-::: {.column width="80%" .pr3}
-
-
 Supported combinators:
 
+:::: {.columns}
+
+::: {.column width="70%" .pr3}
 - **AND**: All conditions must match
 - **OR**: At least one condition must match
 
@@ -128,7 +137,7 @@ To change the combinator:
 2. Click **Apply Filters**.
 :::
 
-::: {.column width="20%" .pl3}
+::: {.column width="30%" .pl3 .pr4}
 ![](/guide/model-inventory/select-your-filters-combinators.png){fig-alt="The AND and OR combinators" .screenshot}
 :::
 
@@ -136,10 +145,10 @@ To change the combinator:
 
 
 ::: {.callout title="Why can't I AND and OR top-level combinators?"}
-Combinators must evaluate logically for the filter to be applied. 
+Combinators must evaluate logically for the filter to be applied: 
 
-- {{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_
-- {{< fa checkmark >}} _Show items matching Condition A AND (Condition B OR Condition C)_
+&ensp;{{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_ cannot be evaluated<br>
+&ensp;{{< fa check >}} _Show items matching Condition A AND (Condition B OR Condition C)_ can be evaluated
 
 {{< fa lightbulb >}} **To achive more complex filters, use groups.**
 :::
@@ -224,10 +233,10 @@ Show _models owned by a specific user that have .pdf attachments_:
 
 ### View active filters
 
-After applying filters, these active filter conditions appear as individual chips next to the label **{{< fa filter >}} Filtered by:**. 
+After applying filters, active filter conditions appear as individual chips next to the label **{{< fa filter >}} Filtered by:**. 
 
-- Field name
-- Operator
+- Field names
+- Operators
 - Values
 
 ### Remove active filters
