Add .callout-button styles

--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -30,10 +30,6 @@ Get started with the {{< var vm.product >}} inventory, which tracks comprehensiv
 
 ## Search, filter, and sort models
 
-:::{.callout}
-Changes are automatically saved and will affect only your account.
-:::
-
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Use the top buttons to narrow down models and organize the model inventory to your preference:
@@ -43,14 +39,13 @@ Changes are automatically saved and will affect only your account.
 <!-- NR Quarto does not indent the last list item correctly if the next callout is in the middle of the list  -->
    - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^2]
 
-::: {.pl4 .nt4}
+::: {.callout-button .pl4 .nt4}
 ::: {.callout collapse="true" title="How do I create effective filters?"}
-
-{{< include /guide/model-inventory/_select-your-filters.qmd >}}
-
+{{< include /guide/model-inventory/_select-your-filters.qmd >}} 
 :::
 :::
 
+Changes are automatically saved and affect only your account.
 
 ::: {.callout title="Note that searching, filtering, and sorting of fields stack."}
 For example, if you first search by keyword for `ValidMind` without clearing that search, any additional filtering and sorting applied will only apply to the results returned by the previous criteria.
