--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -78,10 +78,6 @@ c. Click on any artifact for more information.
 
 ## Filter and sort artifacts
 
-:::{.callout}
-Changes are automatically saved to your account and do not affect other users.
-:::
-
 - By default, artifacts for all models are listed by creation date in descending order.
 - To sort artifacts by a column in ascending ({{< fa angle-down >}}) or descending ({{< fa angle-up >}}) order, click on the column header.
 
@@ -97,15 +93,17 @@ To narrow down artifacts, you can apply some filters:
 
 3. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
-::: {.pl4 .nt2 .pr4} 
-::: {.callout collapse="true" title="How do I create effective filters?"}
-
+<!-- NR This callout requires less negative top margin than the other one ... why?! -->
+::: {.callout-button .pl4 .nt3}
+::: {.callout collapse="true" title="How do I create effective filters?" .callout-button}
 {{< include /guide/model-inventory/_select-your-filters.qmd >}}
-
 :::
 :::
 
 4. Click **Apply Filters**.
+
+<!-- NR Common UI behavior should not be a callout unless there is an issue ... -->
+Changes are automatically saved to your account and do not affect other users.
 
 ### Filter all other artifacts
 
@@ -120,11 +118,9 @@ To narrow down artifacts, you can apply some filters:
 
 4. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
-::: {.pl4 .nt2 .pr4}
-::: {.callout collapse="true" title="How do I create effective filters?"}
-
+::: {.callout-button .pl4 .nt4}
+::: {.callout collapse="true" title="How do I create effective filters?" .callout-button}
 {{< include /guide/model-inventory/_select-your-filters.qmd >}}
-
 :::
 :::
 
