Split steps in examples

--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -137,7 +137,7 @@ To change the combinator:
 2. Click **Apply Filters**.
 :::
 
-::: {.column width="30%" .pl3 .pr4}
+::: {.column width="30%" .pl3}
 ![](/guide/model-inventory/select-your-filters-combinators.png){fig-alt="The AND and OR combinators" .screenshot}
 :::
 
@@ -161,59 +161,69 @@ Combinators must evaluate logically for the filter to be applied:
 
 Show models that are _Active AND in the Credit Risk business unit_:
 
-1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**.
 
-2. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
+2. On the Select Your Filters dialog that opens, add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
 
-3. Click **Apply Filters**.
+3. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
+
+4. Click **Apply Filters**.
 
 ### OR query with groups
 
 Show models that are _(Active AND in Credit Risk) OR (In Review AND in Market Risk)_:
 
-1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Status`, Operator = `equals`, Value = `Active`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**.
 
-2. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
+2. Add the rule: Field = `Status`, Operator = `equals`, Value = `Active`.
 
-3. Click **Add group** to create a new group.
+3. Add rule: Field = `Business Unit`, Operator = `equals`, Value = `Credit Risk`.
 
-4. Change combinator to `OR` (between the two groups).
+4. Click **Add group** to create a new group.
 
-5. In the new group, add: Status = `In Review`, Business Unit = `Market Risk`.
+5. Change combinator to `OR` (between the two groups).
 
-6. Click **Apply Filters**.
+6. In the new group, add: Status = `In Review`, Business Unit = `Market Risk`.
+
+7. Click **Apply Filters**.
 
 ### Custom field filter
 
 Show models where _Custom Field `Risk Level` is `High`_ (requires that you have a custom field called `Risk Level`):
 
-1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Custom Fields > Risk Level`, Operator = `equals`, Value = `High`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**.
 
-2. Click **Apply Filters**.
+2. Add rule: Field = `Custom Fields > Risk Level`, Operator = `equals`, Value = `High`.
+
+3. Click **Apply Filters**.
 
 ### Complex nested query
 
 Show models where _(Status is Active OR In Review) AND (Risk Level is High OR Medium) AND Owner is John Doe_:
 
-1. On the Inventory page, click **{{< fa filter >}} Filter**, and add group: Status = `Active` OR Status = `In Review`.
+1. On the Inventory page, click **{{< fa filter >}} Filter**.
 
-2. Create second group: Risk Level = `High` OR Risk Level = `Medium`.
+2. Add group: Status = `Active` OR Status = `In Review`.
 
-3. Add rule: Owner = `John Doe`.
+3. Create second group: Risk Level = `High` OR Risk Level = `Medium`.
 
-4. Ensure all groups use AND combinator.
+4. Add rule: Owner = `John Doe`.
 
-5. Click **Apply Filters**.
+5. Ensure all groups use AND combinator.
+
+6. Click **Apply Filters**.
 
 ### Date range filter
 
 Show validation issues _created between January 1, 2025 and January 31, 2025_:
 
-1. On the Validation Issues page, click **{{< fa filter >}} Filter**, and add rule: Field = `Created Date`, Operator = `between`.
+1. On the Validation Issues page, click **{{< fa filter >}} Filter**.
 
-2. Enter start date: January 1, 2025.
+2. Add rule: Field = `Created Date`, Operator = `between`.
 
-3. Enter end date: January 31, 2025.
+3. Enter start date: January 1, 2025.
+
+4. Enter end date: January 31, 2025.
 
 4. Click **Apply Filters**.
 
@@ -221,13 +231,15 @@ Show validation issues _created between January 1, 2025 and January 31, 2025_:
 
 Show _models owned by a specific user that have .pdf attachments_:
 
-1. On the Inventory page, click **{{< fa filter >}} Filter**, and add rule: Field = `Owner`, Operator = `in`, Value = Select the user from dropdown.
+1. On the Inventory page, click **{{< fa filter >}} Filter**.
 
-2. Add rule: Field = `Supporting Documents`, Operator = `file name contains`, Value = `pdf`.
+2. Add rule: Field = `Owner`, Operator = `in`, Value = Select the user from dropdown.
 
-3. Ensure the combinator between rules is set to `AND`.
+3. Add rule: Field = `Supporting Documents`, Operator = `file name contains`, Value = `pdf`.
 
-4. Click **Apply Filters**.
+4. Ensure the combinator between rules is set to `AND`.
+
+5. Click **Apply Filters**.
 
 :::
 
