--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -126,7 +126,7 @@ Supported combinators:
 
 :::: {.columns}
 
-::: {.column width="70%" .pr3}
+::: {.column width="70%" .pr5}
 - **AND**: All conditions must match
 - **OR**: At least one condition must match
 
@@ -137,20 +137,21 @@ To change the combinator:
 2. Click **Apply Filters**.
 :::
 
-::: {.column width="30%" .pl3}
+::: {.column width="30%" .pr5}
 ![](/guide/model-inventory/select-your-filters-combinators.png){fig-alt="The AND and OR combinators" .screenshot}
 :::
 
 ::::
 
-
+::: {.pl4 .pr4}
 ::: {.callout title="Why can't I AND and OR top-level combinators?"}
 Combinators must evaluate logically for the filter to be applied: 
 
-&ensp;{{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_ cannot be evaluated<br>
-&ensp;{{< fa check >}} _Show items matching Condition A AND (Condition B OR Condition C)_ can be evaluated
+&ensp;{{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_ &emsp;— cannot be evaluated<br>
+&ensp;{{< fa check >}} _Show items matching Condition A AND (Condition B OR Condition C)_ — can be evaluated
 
 {{< fa lightbulb >}} **To achive more complex filters, use groups.**
+:::
 :::
 
 ## Examples
