Edit: View model activity

--- a/site/guide/model-inventory/_view-model-activity-overview.qmd
+++ b/site/guide/model-inventory/_view-model-activity-overview.qmd
@@ -7,6 +7,7 @@
 - Test results added to your model^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)]
 - Artifacts added, updated, or removed^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
 - Comment creation and replies^[[Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)]
+- Model stakeholders added or removed from your model^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)]
 
 ::::
 
@@ -17,5 +18,6 @@
 - Test results added to your model
 - Artifacts added, updated, or removed
 - Comment creation and replies
+- Model stakeholders added or removed from your model
 
 ::::
